# twstock

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yaml
Documents/Claude/TWStock/.claude/: settings.local.json
argocd/: application.yaml
db/: init.sql
grafana/dashboards/: 01-macro-liquidity.json  02-institutional-flow.json  03-fundamentals-technicals.json  04-multi-factor-signals.json
grafana/datasources/: twstock.yaml
helm/twstock/: Chart.yaml  values.yaml
helm/twstock/files/: init.sql
helm/twstock/templates/: _helpers.tpl  configmap.yaml  db-init-job.yaml  secret.yaml
helm/twstock/templates/api/: deployment.yaml  ingress.yaml  service.yaml
helm/twstock/templates/cronjobs/: collector.yaml
helm/twstock/templates/grafana/: configmaps.yaml  deployment.yaml
helm/twstock/templates/postgresql/: init-configmap.yaml  pg-hba-configmap.yaml  service.yaml  statefulset.yaml
helm/twstock/templates/redis/: service.yaml
services/analyzer/src/: config.py
services/analyzer/src/alerts/: engine.py
services/analyzer/src/valuation/: __init__.py  peg.py
services/api/: Dockerfile  requirements.txt
services/api/src/: config.py  database.py  schemas.py
services/api/src/routers/: stocks.py
services/collector/src/: main.py
services/collector/src/collectors/: finmind.py  macro.py  twse.py
src/twstock/: __main__.py  cli.py  config.py  database.py
src/twstock/collectors/: __init__.py  base.py  finmind.py  macro.py  tdcc.py  twse.py
tests/: test_collectors.py
(+29 files in other folders)
