[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "twstock"
version = "0.1.0"
description = "台股量化分析系統 — 資料管線 MVP"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "asyncpg>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "pydantic-settings>=2.2",
    "yfinance>=0.2.40",
    "pandas>=2.2",
    "tenacity>=8.3",       # retry with backoff
]

[project.scripts]
twstock = "twstock.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/twstock"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
]
